# zeroshot-classification-testing

./: .gitignore  README.md  main.py  pyproject.toml
app/routers/: item_classification_router.py
tests/: test_item_classification.py
